--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         </div>
       </div>
     </div>
-    <div class="main">
+    <div class="main" style="background-color: #f9f7f3;">
       <div class="hoodie" style="position: relative">
-        <img src="image 1178.png" alt="" width="1257" />
+        <img src="image 1178.png" alt="" width="100%" />
         <div
           class="word"
           style="position: absolute; margin: 40px; top: 180px; left: 150px"
@@ -287,3 +287,6 @@
   </body>
 </html>
 
+<!-- git add . ----buh uurchlultuudiig avch baigaa -->
+ <!-- git commit -m "tailbar" ----- uurchilsun file-uudiig temedgleh  -->
+  <!-- git push ----  git hub luu code-oo negtgeh -->A
